@@ -1,34 +1,25 @@
-# Hey Emacs make this  -*- mode: makefile; -*-
-#
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis
-#     https://github.com/eddelbuettel/r-travis/
-
-# new-ish requirement
-sudo: required
-
-# may as well switch to trusty aka 14.04
-dist: trusty
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
+sudo: required
+
+dist: trusty
+
 before_install:
-  - curl -OL http://raw.github.com/eddelbuettel/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp 
+  - ./run.sh install_aptget r-cran-rcpp
 
 script:
-  - ./travis-tool.sh run_tests
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
-
